@@ -1,6 +1,5 @@
 package com.backend.BackendJWT.Models.Auth;
 
-import com.backend.BackendJWT.Models.Auth.Role;
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -10,8 +9,12 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import javax.validation.constraints.Email;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+
 
 
 @Builder
@@ -22,33 +25,55 @@ import java.util.List;
 @Table(name = "\"user\"")
 public class User implements UserDetails {
     @Id
-    @GeneratedValue
-    Integer id;
-    String username;
-    String lastname;
-    String firstname;
-    String country;
-    String password;
-    @Enumerated(EnumType.STRING)
-    Role role;
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @NotNull
+    @Size(min = 1, max = 30)
+    @Column(nullable = false, length = 30)
+    private String username;
+
+    @NotNull
+    @Size(min = 1, max = 30)
+    @Column(nullable = false, length = 30)
+    private String lastname;
+
+    @NotNull
+    @Size(min = 1, max = 30)
+    @Column(nullable = false, length = 30)
+    private String firstname;
+
+    @NotNull
+    @Size(min = 8, max = 12)
+    @Column(nullable = false)
+    private String password;
+
+    @ManyToOne(fetch = FetchType.EAGER)
+    @JoinColumn(nullable = false, name = "role_id")
+    @NotNull
+    private Role role;
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-      return List.of(new SimpleGrantedAuthority((role.name())));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.getRoleName().name()));
     }
+
     @Override
     public boolean isAccountNonExpired() {
-       return true;
+        return true;
     }
+
     @Override
     public boolean isAccountNonLocked() {
-       return true;
+        return true;
     }
+
     @Override
     public boolean isCredentialsNonExpired() {
         return true;
     }
+
     @Override
     public boolean isEnabled() {
         return true;
